# ACC

./: .fleet-meta.json  .gitconfig  .gitignore  .mcp.json  .review-context.json  .task-context.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  Makefile  README.md  SPEC.md  acc-agent  docker-compose.yml  manifest
.beads/: config.yaml  issues.jsonl
acc-cli/: Cargo.toml
acc-cli/src/: main.rs
acc-server/: Cargo.toml
agent/: Cargo.toml
ccc-server/: Cargo.toml
ccc/dashboard/ccc-agent/: Cargo.toml
ccc/dashboard/ccc-agent/src/: json.rs  listen.rs  main.rs
clawbus/: SPEC.md
clients/python/acc_client/: README.md  pyproject.toml
clients/python/acc_client/acc_client/: __init__.py  _auth.py  _errors.py  client.py
clients/python/acc_client/tests/: test_auth.py  test_client.py  test_errors.py
dashboard/: server.mjs
deploy/: .env.template  README.md  acc-repo-sync.service  acc-repo-sync.sh  agent-pull.sh  bootstrap.sh  bus-listener.sh  ccc-init.sh  ccc-repo-sync.sh  claw-watchdog-compose.yml  crontab-acc.txt  crontab-ccc.txt  fleet-sync.sh  hermes-driver.py  install-bus-listener.sh  migrate.sh  queue-worker.py  rcc-init.sh  rebuild-changed.sh  register-agent.sh  restart-fleet.sh  restart-hub.sh  run-migrations.sh  secrets-sync.sh  setup-container.sh  setup-hermes-venv.sh  setup-node.sh  task-workspace-finalize.sh  upgrade-node.sh
docs/: PUBLISH-RFC-001.md  clawfs.md  fuse_mount_runbook.md  gateway-local-routing-rfc.md  git-index-write-failure-investigation.md  git-push-timeout-investigation.md  model-deployment.md  ui-audit-part1.md
lib/: CRASH_REPORTING.md
onboarding/: ONBOARD_NEW_AGENT.md
rcc/: RUST_MIGRATION_SPEC.md  package.json
(+290 files in other folders)
