[package]
name = "ccc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ccc-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# listen subcommand only — runtime created on demand, not for every invocation
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

[dev-dependencies]
tempfile = "3"
