[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acc-client"
version = "0.1.0"
description = "HTTP client for the ACC fleet API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ACC"}]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["acc_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
